// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly with green option set 1`] = `
<button
  className="sc-bdVaJa fxosxn"
/>
`;

exports[`Button component renders correctly with no options 1`] = `
<button
  className="sc-bdVaJa eLPleZ"
/>
`;

exports[`Button component renders correctly with outline option set 1`] = `
<button
  className="sc-bdVaJa MNJmr"
/>
`;

exports[`Button component renders correctly with red option set 1`] = `
<button
  className="sc-bdVaJa EDIIL"
/>
`;
